--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -21,4 +21,12 @@ security:
             #http_basic: ~
 
             # https://symfony.com/doc/current/security/form_login_setup.html
-            #form_login: ~
+            form_login:
+                login_path: login
+                check_path: login
+        secured_area:
+            form_login:
+                csrf_token_generator: security.csrf.token_manager
+    access_control:
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/, roles: ROLE_ADMIN }
